# OOP_Lab5

./: .gitignore  CMakeLists.txt  main.cpp
include/: LinkedList.hpp  MemoryResource.hpp  NewLinkedList.hpp
src/: MemoryResource.cpp
test/: linked_list_basic_test.cpp  linked_list_operations_test.cpp  memory_resource_test.cpp  test.cpp
